# teams.py

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
examples/a2a-test/: README.md  pyproject.toml
examples/a2a-test/src/: main.py
examples/ai-test/: README.md  pyproject.toml
examples/ai-test/src/: main.py
examples/ai-test/src/handlers/: __init__.py  citations.py  feedback_management.py  function_calling.py  memory_management.py  plugins.py
examples/botbuilder/: README.md  pyproject.toml
examples/botbuilder/src/: config.py  main.py
examples/botbuilder/src/bots/: __init__.py  echo_bot.py
examples/cards/: pyproject.toml
examples/cards/src/: main.py
examples/dialogs/: pyproject.toml
examples/dialogs/src/: main.py
examples/dialogs/src/views/customform/: index.html
examples/echo/: pyproject.toml
examples/echo/src/: main.py
examples/graph/: README.md  pyproject.toml
examples/graph/src/: main.py  sample.env
examples/mcp-client/: README.md  pyproject.toml
examples/mcp-client/src/: main.py
examples/mcp-server/: README.md  pyproject.toml
examples/mcp-server/src/: main.py
examples/message-extensions/: pyproject.toml
examples/message-extensions/src/: cards.py  index.html  main.py
examples/oauth/: pyproject.toml
examples/oauth/src/: main.py
examples/stream/: README.md  pyproject.toml
examples/stream/src/: main.py
examples/tab/: pyproject.toml
examples/tab/Web/: package-lock.json  package.json  tsconfig.json  vite.config.js
examples/tab/Web/src/: App.tsx
examples/tab/src/: main.py
scripts/: release.py
stubs/msal/: __init__.pyi
templates/examples/: cookiecutter.json
templates/examples/{{cookiecutter.example_app_name}}/: README.md  pyproject.toml
templates/examples/{{cookiecutter.example_app_name}}/appPackage/: manifest.json
templates/examples/{{cookiecutter.example_app_name}}/src/: main.py
templates/package/{{cookiecutter.pypi_package_name}}/: README.md  pyproject.toml
