[project]
name = "ai-test"
version = "0.1.0"
description = "test the ai interactions"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-ai",
    "microsoft-teams-apps",
    "microsoft-teams-openai",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-ai = { workspace = true }
microsoft-teams-openai = { workspace = true }
