[project]
name = "botbuilder"
version = "0.1.0"
description = "Botbuilder sample"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "botbuilder-core>=4.14.0",
    "microsoft-teams-apps",
    "microsoft-teams-devtools",
    "microsoft-teams-botbuilder"
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-devtools = { workspace = true }
microsoft-teams-botbuilder = { workspace = true }
