[project]
name = "graph"
version = "0.1.0"
description = "demo app to test Azure Graph integration"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "microsoft-teams-apps>=0.1.0",
    "microsoft-teams-graph>=0.1.0",
    "microsoft-teams-api>=0.1.0",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-graph = { workspace = true }
microsoft-teams-api = { workspace = true }
