[project]
name = "stream"
version = "0.1.0"
description = "Streaming test app that emits messages on install"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api"
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-api = { workspace = true }
