[project]
name = "{{cookiecutter.example_app_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
