[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [{ name = "Microsoft", email = "TeamsAISDKFeedback@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
repository = "https://github.com/microsoft/teams.py"
keywords = ["microsoft", "teams", "ai", "bot", "agents"]
license = "MIT"
dependencies = []
{% if not cookiecutter.core %}
[tool.microsoft-teams.metadata]
external = true
{% endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microsoft"]

[tool.hatch.build.targets.sdist]
include = ["src"]
